# PhotoEditor

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/viktor/photoeditor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AverageSmoothFilter.cpp  AverageSmoothFilter.h  BlockFilter.cpp  BlockFilter.h  BrightContrastFilter.cpp  BrightContrastFilter.h  ColorGetter.h  ColorTranslator.cpp  ColorTranslator.h  GammaCorrectionFilter.cpp  GammaCorrectionFilter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GothamFilter.cpp  GothamFilter.h  HDRFilter.cpp  HDRFilter.h  HueSaturationFilter.cpp  HueSaturationFilter.h  ImageFilter.h  LightFilter.cpp  LightFilter.h  LomoAddBlackRound.cpp  LomoAddBlackRound.h  MotionBlurFilter.cpp  MotionBlurFilter.h  NeonFilter.cpp  NeonFilter.h  OilFilter.cpp  OilFilter.h  PixelateFilter.cpp  PixelateFilter.h  ReliefFilter.cpp  ReliefFilter.h  SharpenFilter.cpp  SharpenFilter.h  SketchFilter.cpp  SketchFilter.h  SoftGlowFilter.cpp  SoftGlowFilter.h  (+4 more)
app/src/main/java/com/example/viktor/photoeditor/: MainActivity.java  SecondActivity.java
app/src/main/java/filters/: AverageSmoothFilter.java  BlockFilter.java  FilterImage.java  GaussianBlurFilter.java  GothamFilter.java  HDRFilter.java  LightFilter.java  LomoAddBlackRound.java  MotionBlurFilter.java  NativeFunction.java  NeonFilter.java  OilFilter.java  PixelateFilter.java  ReliefFilter.java  SharpenFilter.java  SketchFilter.java  SoftGlowFilter.java  TvFilter.java
app/src/main/res/layout/: activity_main.xml  activity_second.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/example/viktor/photoeditor/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
